--- a/BuildingEscape/BuildingEscape.uproject
+++ b/BuildingEscape/BuildingEscape.uproject
@@ -1,11 +1,11 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "4.12",
+	"EngineAssociation": "4.19",
 	"Category": "",
 	"Description": "",
 	"Modules": [
 		{
-			"Name": "EscapingBuilding",
+			"Name": "BuildingEscape",
 			"Type": "Runtime",
 			"LoadingPhase": "Default"
 		}
