--- a/BuildingEscape/Config/DefaultGame.ini
+++ b/BuildingEscape/Config/DefaultGame.ini
@@ -1,5 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=EBFBC6AB4AE2F5687DCD0F910A933BF8
+CompanyName=Aideny Studio
+CompanyDistinguishedName=Aideny
+CopyrightNotice=Copyright Aiden Yi 2018
 
 [StartupActions]
 bAddPacks=True
